[package]
name = "socketioxide-issue-22"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hyper = { version ="0.14.26", features = ["full"] }
serde = { version = "1.0.164",  features = ["derive"] }
serde_json = "1.0.96"
socketioxide = {git = "https://github.com/sleeyax/socketioxide.git", branch = "ft-engineio-v3-support"}
tokio = {version = "1.28.2", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
